bin/testsuite/tests/compiler/src/errors/compiler5125.swg
#global testerror "Err0736"
#test
{
    let a = 5 + {2}
}
